Fixed Load More button not showing

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ header{
 
 main{
   grid-area: main;
+  margin-bottom: 4rem;
 }
 
 footer{
